--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Kokoa Clone - login</title>
   </head>
   <body>
-    <div class="status-bar">
+    <section class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
         <i class="fa-solid fa-wifi"></i>
@@ -21,7 +21,43 @@
         <i class="fa-solid fa-battery-full fa-lg"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
-    </div>
+    </section>
+
+    <section class="workspace">
+      <div class="hello"></div>
+      <div class="hello"></div>
+      <div class="hello"></div>
+      <div class="hello"></div>
+      <div class="hello"></div>
+      <div class="hello"></div>
+    </section>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html">
+            <i class="fa-regular fa-user fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
+            <i class="fa-regular fa-comment fa-2x"> </i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html">
+            <i class="fa-solid fa-magnifying-glass fa-2x"> </i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html">
+            <div class="point"></div>
+            <i class="fa-solid fa-ellipsis fa-2x"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </body>
 
   <script
