--- a/chats.html
+++ b/chats.html
@@ -33,14 +33,7 @@
       </div>
     </header>
 
-    <section class="workspace">
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-    </section>
+    <section class="workspace">hello</section>
 
     <nav class="nav">
       <ul class="nav__list">
