--- a/chats.html
+++ b/chats.html
@@ -33,7 +33,94 @@
       </div>
     </header>
 
-    <section class="workspace">hello</section>
+    <main class="workspace">
+      <section>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
