Made freinds and chats

--- a/friends.html
+++ b/friends.html
@@ -32,14 +32,219 @@
       </div>
     </header>
 
-    <section class="workspace">
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-    </section>
+    <main class="workspace">
+      <!-- Me -->
+      <section class="user-components user-components--xl">
+        <!-- <div class="user-component-category">
+          <hr class="user-component-category__line" />
+          <h5 class="user-component-category__title">Your Friends</h5>
+        </div> -->
+
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title">Channel</h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+      </section>
+
+      <!-- Friends -->
+      <section class="user-components user-components--sm">
+        <div class="user-component-category">
+          <hr class="user-component-category__line" />
+          <h5 class="user-component-category__title">New Friends</h5>
+        </div>
+
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+      </section>
+      <section class="user-components user-components--sm">
+        <div class="user-component-category">
+          <hr class="user-component-category__line" />
+          <h5 class="user-component-category__title">Your Friends</h5>
+        </div>
+
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <div class="user-component__avatar">
+              <img
+                src="https://avatars.githubusercontent.com/u/52969866?s=16&v=4"
+              />
+            </div>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <!-- <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div> -->
+          </div>
+        </div>
+      </section>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
