--- a/chats.html
+++ b/chats.html
@@ -157,6 +157,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ★ ㅠㅠ</span>
+    </div>
   </body>
 
   <script
