--- a/friends.html
+++ b/friends.html
@@ -272,6 +272,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ★ ㅠㅠ</span>
+    </div>
   </body>
 
   <script
