--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ★ ㅠㅠ</span>
+    </div>
   </body>
 
   <script
