--- a/more.html
+++ b/more.html
@@ -116,6 +116,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ★ ㅠㅠ</span>
+    </div>
   </body>
 
   <script
