--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>My Kokoa Clone - login</title>
+    <title>Find - My Kokoa Clone</title>
   </head>
   <body>
     <section class="status-bar">
@@ -24,53 +24,29 @@
     </section>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
-        <i class="fa-solid fa-magnifying-glass fa-lg"> </i>
-        <i class="fa-regular fa-comment-dots fa-lg"></i>
-        <i class="fa-solid fa-music fa-lg"></i>
+        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
         <i class="fa-solid fa-gear fa-lg"></i>
       </div>
     </header>
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, log in with your email or phone number
+      </p>
+    </header>
 
-    <section class="workspace">
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-      <div class="hello"></div>
-    </section>
-
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__btn">
-          <a class="nav__link" href="friends.html">
-            <i class="fa-regular fa-user fa-2x"></i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"> </i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="find.html">
-            <i class="fa-solid fa-magnifying-glass fa-2x"> </i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="more.html">
-            <div class="point"></div>
-            <i class="fa-solid fa-ellipsis fa-2x"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Emaill or phone number" />
+      <input name="password" type="text" placeholder="Password" />
+      <input name="submit" type="submit" value="Log In" />
+      <input type="submit" value="Sign Up" />
+      <a href="#">Fine Kokoa Account or Password</a>
+    </form>
 
     <div id="no-mobile">
-      <span>Your screen is too big ★ ㅠㅠ</span>
+      <span>Your screen is too big ㅠㅠ</span>
     </div>
   </body>
 
