--- a/friends.html
+++ b/friends.html
@@ -276,6 +276,10 @@
     <div id="no-mobile">
       <span>Your screen is too big ★ ㅠㅠ</span>
     </div>
+
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment fa-2x"> </i>
+    </div>
   </body>
 
   <script
