--- a/friends.html
+++ b/friends.html
@@ -278,6 +278,10 @@
     </div>
   </body>
 
+  <div id="splash-screen">
+    <i class="fa-solid fa-comment fa-2x"> </i>
+  </div>
+
   <script
     src="https://kit.fontawesome.com/6b229d2ba8.js"
     crossorigin="anonymous"
